--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "1.1.0",
   "main": "main.js",
   "description": "Yet another animation frame loop.",
+  "keywords": ["loop", "frame loop", "animation frame loop"],
   "author": "Andrew McPherson <@ehgoodenough>",
   "license": "MIT",
   "repository": {
